fixed and rolled back changes